tests/examples/snapshots/fail/sorts/sort_checking_forall.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/sort_checking_forall.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: expected s but found bool
  ┌─ tests/examples/fail/sorts/sort_checking_forall.fly:7:1
  │
7 │ assert forall x:s. r(x = x)
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^


